Add a bunch of new properties